# OpenGL

About/: Graphics-Rendering-Pipeline  Shader  What_is_openGL
Triangle_Creation/: CMakeLists.txt
Triangle_Creation/glad/: glad.c  glad.h
Triangle_Creation_The_Cherno/: CMakeLists.txt  triangle.cpp
Video_Player/: CMakeLists.txt
Video_Player/lib/FFmpeg_Video_Decoding/: CMakeLists.txt
Video_Player/src/: decode_video_and_extract_frames.cpp  load_grayscale_frames.cpp  load_raw_rgb_pixel_data.cpp  rendering_grayscale_frames.cpp  rendering_raw_rgb_pixels.cpp  yuv_to_rgb_to_ppm.cpp
Window_Creation/: CMakeLists.txt  window.cpp
